# shamba-up-services

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.acl.yml  docker-compose.shared.yml  docker-compose.yml  scripts.sh
.github/workflows/: main.yml
lib/: Cargo.toml
lib/src/utils/: cookie_parser.rs  custom_error.rs  mod.rs
nginx/: nginx.conf
services/acl-service/: Cargo.toml  schema.gql
services/acl-service/src/: main.rs
services/acl-service/src/auth/: oauth.rs
services/acl-service/src/database/: connection.rs
services/acl-service/src/database/schemas/: schemas.surql
services/acl-service/src/graphql/: mod.rs
services/acl-service/src/graphql/resolvers/: mutation.rs  query.rs
services/acl-service/src/graphql/schemas/: role.rs  user.rs
services/shared-service/: Cargo.toml
services/shared-service/src/: main.rs
services/shared-service/src/database/: connection.rs
services/shared-service/src/graphql/resolvers/: mutation.rs  query.rs
services/shared-service/src/graphql/schemas/: file.rs
src/: main.rs
src/graphql/schemas/: root.rs
