[package]
name = "elonaire-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
async-graphql = "6.0.7"
async-graphql-axum = "6.0.7"
tokio = { version = "1", features = ["full"] }
hyper = "0.14.26"
tower-http = { version = "0.4.0", features = ["cors"] }

