[package]
name = "acl-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
async-graphql = "6.0.7"
async-graphql-axum = "6.0.7"
tokio = { version = "1", features = ["full"] }
hyper = "0.14.26"
tower-http = { version = "0.4.0", features = ["cors"] }
surrealdb = "1.0.2"
chrono = "0.4.31"
serde = "1.0.189"
bcrypt = "0.15.0"
oauth2 = "4.4.2"
cookie = "0.18.0"
dotenvy = "0.15.7"
async-trait = "0.1.74"
lib = { path = "../../lib" }
reqwest = { version = "0.11.6", features = ["json"] }
jwt-simple = "0.11.9"

[future-incompat-report]
frequency = "always"
